// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log output Group: logs Test: logs: log 1`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String>|trampoline (wasm-function[45]:0x15fa)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[47]:0x162e)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c04)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 2`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3472,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32>|trampoline (wasm-function[50]:0x16b7)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[51]:0x16d5)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c08)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 3`] = `
HostValue {
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3 | null> (wasm-function[56]:0x17c7)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3 | null>|trampoline (wasm-function[57]:0x185a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[58]:0x1887)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c0c)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 4`] = `
HostValue {
  "isNull": false,
  "keys": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1750)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1768)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1780)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3328,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1903)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x175d)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1775)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x178d)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c2f)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 5`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3376,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x247b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c40)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c40)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c40)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c40)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 6`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i64> (wasm-function[72]:0x2573)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i64>|trampoline (wasm-function[73]:0x25ab)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[74]:0x25c9)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c4a)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 7`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u32> (wasm-function[76]:0x2616)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u32>|trampoline (wasm-function[77]:0x264e)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[78]:0x266c)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c51)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 8`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u64> (wasm-function[80]:0x26b9)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u64>|trampoline (wasm-function[81]:0x26f1)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[82]:0x270f)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c5a)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 9`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8>|trampoline (wasm-function[85]:0x2794)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[86]:0x27b2)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c5e)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 10`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i16> (wasm-function[88]:0x27ff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i16>|trampoline (wasm-function[89]:0x2837)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[90]:0x2855)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c62)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 11`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool> (wasm-function[92]:0x28a2)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool>|trampoline (wasm-function[93]:0x28da)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[94]:0x28f8)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c66)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 3584,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 12`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool> (wasm-function[92]:0x28a2)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool>|trampoline (wasm-function[93]:0x28da)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[94]:0x28f8)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c6a)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 3584,
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 13`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3200,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29bc)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c6e)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c6e)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c6e)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c6e)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 14`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3264,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2ad0)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c72)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c72)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c72)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c72)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs Test: logs: log 15`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<(i: i32) => i32> (wasm-function[107]:0x2ba4)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<(i: i32) => i32>|trampoline (wasm-function[108]:0x2bd8)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[109]:0x2bf6)
    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2c76)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "~lib/rt/rtrace/onalloc",
  "values": null,
}
`;

exports[`log output Group: logs Test: logs: log 16`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0~anonymous|0 (wasm-function[110]:0x2caa)
    at ../assembly/assembly/internal/call/__call (wasm-function[126]:0x2ef0)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: log 1`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 464,
  "signed": false,
  "size": 12,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String>|trampoline (wasm-function[45]:0x15fa)
    at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[47]:0x162e)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2ce1)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 2,
  "typeId": 1,
  "typeName": "String",
  "value": "Hello world!",
  "values": null,
}
`;

exports[`log output Group: logs: log 2`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3472,
  "signed": true,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32>|trampoline (wasm-function[50]:0x16b7)
    at ../assembly/assembly/internal/log/log<i32> (wasm-function[51]:0x16d5)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2ce5)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "i32",
  "value": 42,
  "values": null,
}
`;

exports[`log output Group: logs: log 3`] = `
HostValue {
  "isNull": true,
  "keys": null,
  "negated": false,
  "nullable": true,
  "offset": 0,
  "pointer": 0,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3 | null> (wasm-function[56]:0x17c7)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3 | null>|trampoline (wasm-function[57]:0x185a)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3 | null> (wasm-function[58]:0x1887)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2ce9)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": null,
}
`;

exports[`log output Group: logs: log 4`] = `
HostValue {
  "isNull": false,
  "keys": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 720,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1750)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "x",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 784,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1768)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "y",
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 816,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/string/String> (wasm-function[42]:0x1518)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1780)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 2,
      "typeId": 1,
      "typeName": "String",
      "value": "z",
      "values": null,
    },
  ],
  "negated": false,
  "nullable": false,
  "offset": 24,
  "pointer": 3328,
  "signed": false,
  "size": 24,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1903)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 1,
  "typeId": 7,
  "typeName": "Vec3",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x175d)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x1775)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3520,
      "signed": true,
      "size": 8,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<f64> (wasm-function[54]:0x172d)
    at assembly/jest-log/Vec3#__aspectAddHostValueKeyValuePairs (wasm-function[55]:0x178d)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3> (wasm-function[60]:0x1917)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<assembly/jest-log/Vec3>|trampoline (wasm-function[61]:0x194d)
    at ../assembly/assembly/internal/log/log<assembly/jest-log/Vec3> (wasm-function[62]:0x197a)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d0c)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)",
      "type": 8,
      "typeId": 0,
      "typeName": "f64",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 5`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3376,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x247b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d1d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 11,
  "typeId": 9,
  "typeName": "Array<i32>",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d1d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d1d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 4,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i32> (wasm-function[49]:0x167f)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>> (wasm-function[68]:0x24aa)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/array/Array<i32>>|trampoline (wasm-function[69]:0x24f5)
    at ../assembly/assembly/internal/log/log<~lib/array/Array<i32>> (wasm-function[70]:0x2522)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d1d)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i32",
      "value": 3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 6`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i64> (wasm-function[72]:0x2573)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i64>|trampoline (wasm-function[73]:0x25ab)
    at ../assembly/assembly/internal/log/log<i64> (wasm-function[74]:0x25c9)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d27)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "i64",
  "value": "9999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 7`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 4,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u32> (wasm-function[76]:0x2616)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u32>|trampoline (wasm-function[77]:0x264e)
    at ../assembly/assembly/internal/log/log<u32> (wasm-function[78]:0x266c)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d2e)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "u32",
  "value": 1234567,
  "values": null,
}
`;

exports[`log output Group: logs: log 8`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 8,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u64> (wasm-function[80]:0x26b9)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u64>|trampoline (wasm-function[81]:0x26f1)
    at ../assembly/assembly/internal/log/log<u64> (wasm-function[82]:0x270f)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d37)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "u64",
  "value": "999999999999",
  "values": null,
}
`;

exports[`log output Group: logs: log 9`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8>|trampoline (wasm-function[85]:0x2794)
    at ../assembly/assembly/internal/log/log<i8> (wasm-function[86]:0x27b2)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d3b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "i8",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 10`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": true,
  "size": 2,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i16> (wasm-function[88]:0x27ff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i16>|trampoline (wasm-function[89]:0x2837)
    at ../assembly/assembly/internal/log/log<i16> (wasm-function[90]:0x2855)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d3f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 7,
  "typeId": 0,
  "typeName": "i16",
  "value": -1,
  "values": null,
}
`;

exports[`log output Group: logs: log 11`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool> (wasm-function[92]:0x28a2)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool>|trampoline (wasm-function[93]:0x28da)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[94]:0x28f8)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d43)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 3584,
  "values": null,
}
`;

exports[`log output Group: logs: log 12`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3584,
  "signed": false,
  "size": 1,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool> (wasm-function[92]:0x28a2)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<bool>|trampoline (wasm-function[93]:0x28da)
    at ../assembly/assembly/internal/log/log<bool> (wasm-function[94]:0x28f8)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d47)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 9,
  "typeId": 0,
  "typeName": "bool",
  "value": 3584,
  "values": null,
}
`;

exports[`log output Group: logs: log 13`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3200,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29bc)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 11,
  "typeId": 3,
  "typeName": "Uint8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 0,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": false,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<u8> (wasm-function[98]:0x295b)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array> (wasm-function[99]:0x29eb)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Uint8Array>|trampoline (wasm-function[100]:0x2a36)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Uint8Array> (wasm-function[101]:0x2a63)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4b)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "u8",
      "value": 2,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 14`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 3264,
  "signed": false,
  "size": 3,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2ad0)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 11,
  "typeId": 4,
  "typeName": "Int8Array",
  "value": 0,
  "values": Array [
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -1,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -2,
      "values": null,
    },
    HostValue {
      "isNull": false,
      "keys": null,
      "negated": false,
      "nullable": false,
      "offset": 0,
      "pointer": 3584,
      "signed": true,
      "size": 1,
      "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<i8> (wasm-function[84]:0x275c)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array> (wasm-function[104]:0x2aff)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<~lib/typedarray/Int8Array>|trampoline (wasm-function[105]:0x2b4a)
    at ../assembly/assembly/internal/log/log<~lib/typedarray/Int8Array> (wasm-function[106]:0x2b77)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d4f)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
      "type": 7,
      "typeId": 0,
      "typeName": "i8",
      "value": -3,
      "values": null,
    },
  ],
}
`;

exports[`log output Group: logs: log 15`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1,
  "signed": false,
  "size": 0,
  "stack": "    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<(i: i32) => i32> (wasm-function[107]:0x2ba4)
    at ../assembly/assembly/internal/Reflect/Reflect.toHostValue<(i: i32) => i32>|trampoline (wasm-function[108]:0x2bd8)
    at ../assembly/assembly/internal/log/log<(i: i32) => i32> (wasm-function[109]:0x2bf6)
    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d53)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 6,
  "typeId": 13,
  "typeName": "Function",
  "value": "~lib/rt/rtrace/onalloc",
  "values": null,
}
`;

exports[`log output Group: logs: log 16`] = `
HostValue {
  "isNull": false,
  "keys": null,
  "negated": false,
  "nullable": false,
  "offset": 0,
  "pointer": 1280,
  "signed": false,
  "size": 0,
  "stack": "    at start:assembly/jest-log~anonymous|0 (wasm-function[113]:0x2d87)
    at ../assembly/assembly/internal/Describe/describe (wasm-function[115]:0x2dbe)
    at start:assembly/jest-log (wasm-function[116]:0x2e0f)
    at ~start (wasm-function[130]:0x2f17)",
  "type": 2,
  "typeId": 0,
  "typeName": "trace",
  "value": "trace: The thing! 1, 2, 3, 4, 5",
  "values": null,
}
`;

exports[`log output Group: logs: todo 1`] = `"one"`;

exports[`log output Group: logs: todo 2`] = `"two"`;

exports[`log output Group: logs: todo 3`] = `"three"`;
